--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -1999,6 +1999,12 @@ input, select, textarea {
 			border-top: solid 1px rgba(255, 255, 255, 0.15);
 			position: relative;
 		}
+		.features section .table {
+			padding: 3.5em 3em 1em 3.5em ;
+			width: 100%;
+			border-top: solid 1px rgba(255, 255, 255, 0.15);
+			position: relative;
+		}
 
 			.features section:nth-child(-n + 2) {
 				border-top-width: 0;
