--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -2864,7 +2864,7 @@ input, select, textarea {
 	section.special, article.special {
 		text-align: center;
 	}
-	section.table{
+	.table{
 		width = 100%
 	}
 
