테이블너비수정3

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -2864,7 +2864,8 @@ input, select, textarea {
 	section.special, article.special {
 		text-align: center;
 	}
-	.table{
+	.table_section{
+		padding: 3.5em 3em 1em 7em ;
 		width = 100%
 	}
 
