테이블너비수정5

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -1999,7 +1999,7 @@ input, select, textarea {
 			border-top: solid 1px rgba(255, 255, 255, 0.15);
 			position: relative;
 		}
-		.features section .table{
+		#id1{
 			padding: 3.5em 3em 1em 7em ;
 			width: 100%;
 			border-top: solid 1px rgba(255, 255, 255, 0.15);
