--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -3241,31 +3241,31 @@ input, select, textarea {
 			}
 
 		.wrapper.alt {
-			background-color: #261c3e;
+			background-color: #E94560;
 		}
 
 		.wrapper.style1 {
-			background-color: #484D8A;
+			background-color: #1A1A2E;
 		}
 
 		.wrapper.style1-alt {
-			background-color: #484D8A;
+			background-color: #E94560;
 		}
 
 		.wrapper.style2 {
-			background-color: #5B4CA1;
+			background-color: #16213E;
 		}
 
 		.wrapper.style2-alt {
-			background-color: #6B4796;
+			background-color: #E94560;
 		}
 
 		.wrapper.style3 {
-			background-color: #4C69A1;
+			background-color: #0F3460;
 		}
 
 		.wrapper.style3-alt {
-			background-color: #477796;
+			background-color: #E94560;
 		}
 
 		.wrapper.fullscreen {
