--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -98,7 +98,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #312450;
+		background: #16213E;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -197,10 +197,10 @@ input, select, textarea {
 		}
 
 			h1.major:after {
-				background-image: -moz-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -webkit-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -ms-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: linear-gradient(to right, #5e42a6, #b74e91);
+				background-image: -moz-linear-gradient(to right, #0F3460, #E94560);
+				background-image: -webkit-linear-gradient(to right, #0F3460, #E94560);
+				background-image: -ms-linear-gradient(to right, #0F3460, #E94560);
+				background-image: linear-gradient(to right, #0F3460, #E94560);
 				-moz-transition: max-width 0.2s ease;
 				-webkit-transition: max-width 0.2s ease;
 				-ms-transition: max-width 0.2s ease;
@@ -1915,7 +1915,7 @@ input, select, textarea {
 		button.primary,
 		.button.primary {
 			background-color: #ffffff;
-			color: #312450 !important;
+			color: #E94560 !important;
 		}
 
 			input[type="submit"].primary:after,
@@ -2361,7 +2361,7 @@ input, select, textarea {
 
 		select option {
 			color: #ffffff;
-			background: #312450;
+			background: #16213E;
 		}
 
 		select:focus::-ms-value {
@@ -2449,7 +2449,7 @@ input, select, textarea {
 		input[type="radio"]:checked + label:before {
 			background: #ffffff;
 			border-color: #ffffff;
-			color: #b74e91;
+			color: #E94560;
 			content: '\f00c';
 		}
 
@@ -2530,7 +2530,7 @@ input, select, textarea {
 			display: block;
 			background: #ffffff;
 			border-radius: 100%;
-			color: #312450;
+			color: #16213E;
 			text-align: center;
 			line-height: 2.5em;
 			margin: 0 0 1.3em 0;
@@ -2541,27 +2541,27 @@ input, select, textarea {
 			}
 
 				.wrapper.style1 .icon.major:before {
-					color: #5e42a6;
+					color: #16213E;
 				}
 
 				.wrapper.style1-alt .icon.major:before {
-					color: #493382;
+					color: #16213E;
 				}
 
 				.wrapper.style2 .icon.major:before {
-					color: #5052b5;
+					color: #1A1A2E;
 				}
 
 				.wrapper.style2-alt .icon.major:before {
-					color: #3e4094;
+					color: #1A1A2E;
 				}
 
 				.wrapper.style3 .icon.major:before {
-					color: #b74e91;
+					color: #0F3460;
 				}
 
 				.wrapper.style3-alt .icon.major:before {
-					color: #953d75;
+					color: #0F3460;
 				}
 
 /* Image */
@@ -3375,7 +3375,7 @@ input, select, textarea {
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
-		background-color: #5e42a6;
+		background-color: #16213E;
 		cursor: default;
 		padding: 1.75em 2em;
 	}
@@ -3529,7 +3529,7 @@ input, select, textarea {
 
 	#sidebar {
 		padding: 2.5em 2.5em 0.5em 2.5em ;
-		background: #312450;
+		background: #16213E;
 		cursor: default;
 		height: 100vh;
 		left: 0;
@@ -3770,10 +3770,10 @@ input, select, textarea {
 			}
 
 			#sidebar nav a:after {
-				background-image: -moz-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -webkit-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -ms-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: linear-gradient(to right, #5e42a6, #b74e91);
+				background-image: -moz-linear-gradient(to right, #0F3460, #E94560);
+				background-image: -webkit-linear-gradient(to right, #0F3460, #E94560);
+				background-image: -ms-linear-gradient(to right, #0F3460, #E94560);
+				background-image: linear-gradient(to right, #0F3460, #E94560);
 				-moz-transition: max-width 0.2s ease;
 				-webkit-transition: max-width 0.2s ease;
 				-ms-transition: max-width 0.2s ease;
@@ -3862,7 +3862,7 @@ input, select, textarea {
 
 						#sidebar nav a:after {
 							background-image: none;
-							background-color: #b74e91;
+							background-color: #E94560;
 						}
 
 		}
