--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -4,6 +4,11 @@
 	Hyperspace by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+
+	메인 : #1A1A2E
+  사이드바 & header: #16213E
+  contents : #0F3460
+  강조(글씨): #E94560
 */
 
 html, body, div, span, applet, object,
