사이트 링크 추가

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -5,6 +5,7 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 
+  팔레트 사이트 : https://colorhunt.co/palettes/winter
 	메인 : #1A1A2E
   사이드바 & header: #16213E
   contents : #0F3460
