--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -3062,6 +3062,23 @@ input, select, textarea {
 			width: 50em;
 			-ms-flex: 1;
 		}
+		#id1{
+			padding: 4em 5em 2em 5em ;
+			width: 100%;
+			display: -moz-flex;
+			display: -webkit-flex;
+			display: -ms-flex;
+			display: flex;
+			-moz-flex-direction: column;
+			-webkit-flex-direction: column;
+			-ms-flex-direction: column;
+			flex-direction: column;
+			-moz-justify-content: center;
+			-webkit-justify-content: center;
+			-ms-justify-content: center;
+			justify-content: center;
+			-ms-flex: 1;
+		}
 
 			.spotlights > section > .content > .inner {
 				-moz-transform: translateX(0) translateY(0);
